# xenia-canary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua  xenia-build.py
.github/workflows/: Check_commit_message.yml  Create_release.yml  Linux_build.yml  Linux_x86.yml  Orchestrator.yml  Windows_build.yml  Windows_x86.yml
docs/: gns_integration.md
resources/: xenia-canary-netplay.config.toml
resources/patches/: 534507D4  - Chromehounds.patch.toml
src/xenia/: CMakeLists.txt  config.cc  emulator.cc  emulator.h  xbox.h
src/xenia/app/: CMakeLists.txt  emulator_window.cc  emulator_window.h  gamerpic_browser.cc  gamerpic_browser.h  netplay_settings_dialog.cc  netplay_settings_dialog.h  premake5.lua  profile_dialogs.cc  profile_dialogs.h  updater.cc  updater.h  updater_dialog.cc  updater_dialog.h  xenia_main.cc
src/xenia/base/: cvar.cc  cvar.h  filesystem_wildcard.cc  jpeg_utils.cc  jpeg_utils.h  png_utils.cc  png_utils.h  socket_win.cc  threading.cc  threading.h
src/xenia/cpu/: processor.cc
src/xenia/gpu/: graphics_system.cc  spirv_shader_translator.cc
src/xenia/kernel/: CMakeLists.txt  XLiveAPI.cpp  XLiveAPI.h  arbitration_object_json.cc  arbitration_object_json.h  base_object_json.cc  base_object_json.h  gns_signaling.cc  gns_signaling.h  gns_transport.cc  gns_transport.h  juicesocket.cc  juicesocket.h  kernel_state.cc  kernel_state.h  leaderboard_object_json.cc  leaderboard_object_json.h  player_object_json.cc  player_object_json.h  premake5.lua  session_object_json.cc  turn.h  (+14 more)
src/xenia/tools/gns_gateway/: CMakeLists.txt  gns_gateway_main.cc
(+167 files in other folders)
